--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,50 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>22/02/24 14:01:25</td>   <td>-86759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Demo.closur()[pri:0, instance:Testcases.Demo@729d991e]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>22/02/24 14:01:13</td>   <td>-98948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Demo.initialization()[pri:0, instance:Testcases.Demo@729d991e]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="8ef0ea">  <td>22/02/24 14:01:00</td>   <td>-112112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyProduct.availabilityofproduct(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.VerifyProduct@1de5f259]">availabilityofproduct</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>22/02/24 14:00:18</td>   <td>-154386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Productavailability.initialization()[pri:0, instance:Testcases.Productavailability@194bcebf]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>22/02/24 14:00:52</td>   <td>-119601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Productavailability.closur()[pri:0, instance:Testcases.Productavailability@194bcebf]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="8ef0ea">  <td>22/02/24 14:01:12</td>   <td>-99710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyProduct.closur()[pri:0, instance:Testcases.VerifyProduct@1de5f259]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="8ef0ea">  <td>22/02/24 14:00:53</td>   <td>-118825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyProduct.initialization()[pri:0, instance:Testcases.VerifyProduct@1de5f259]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>22/02/24 14:00:27</td>   <td>-145007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Productavailability.product(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Productavailability@194bcebf]">product</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e6a798">  <td>22/02/24 14:02:53</td>   <td>714</td> <td title="&lt;&lt;Baseclass.later()[pri:0, instance:Testcases.Productavailability@194bcebf]">&lt;&lt;later</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e6a798">  <td>22/02/24 14:00:17</td>   <td>-155071</td> <td title="&gt;&gt;Baseclass.setreports()[pri:0, instance:Testcases.Productavailability@194bcebf]">&gt;&gt;setreports</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>22/02/24 14:01:19</td>   <td>-92855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.verifyLogo(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Demo@729d991e]">verifyLogo</td> 
-  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e6a798">  <td>22/02/25 12:20:43</td>   <td>13004</td> <td title="&lt;&lt;Baseclass.later()[pri:0, instance:Testcases.Productavailability@194bcebf]">&lt;&lt;later</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
+<tr bgcolor="ea606c">  <td>22/02/25 12:18:47</td>   <td>-102676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyProduct.availabilityofproduct(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.VerifyProduct@1de5f259]">availabilityofproduct</td> 
+  <td>TestNG-test=Test-2@1223770348</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:38</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="ea606c">  <td>22/02/25 12:18:07</td>   <td>-142723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyProduct.initialization()[pri:0, instance:Testcases.VerifyProduct@1de5f259]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@1223770348</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:42</td>   <td>12130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:38</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="ea606c">  <td>22/02/25 12:19:23</td>   <td>-66359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyProduct.closur()[pri:0, instance:Testcases.VerifyProduct@1de5f259]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@1223770348</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:42</td>   <td>12130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:42</td>   <td>12130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/02/25 12:18:07</td>   <td>-142726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Productavailability.initialization()[pri:0, instance:Testcases.Productavailability@194bcebf]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1582393899</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/02/25 12:19:42</td>   <td>-47593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Productavailability.closur()[pri:0, instance:Testcases.Productavailability@194bcebf]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1582393899</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e6a798">  <td>22/02/25 12:18:06</td>   <td>-143396</td> <td title="&gt;&gt;Baseclass.setreports()[pri:0, instance:Testcases.Productavailability@194bcebf]">&gt;&gt;setreports</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/02/25 12:19:11</td>   <td>-78626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Demo.closur()[pri:0, instance:Testcases.Demo@729d991e]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:42</td>   <td>12130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/02/25 12:18:44</td>   <td>-106127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Productavailability.product(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Productavailability@194bcebf]">product</td> 
+  <td>TestNG-test=Test-1@1582393899</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:38</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/02/25 12:18:07</td>   <td>-142724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Demo.initialization()[pri:0, instance:Testcases.Demo@729d991e]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/02/25 12:18:44</td>   <td>-105406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.verifyLogo(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Demo@729d991e]">verifyLogo</td> 
+  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
+<tr bgcolor="e79ae3">  <td>22/02/25 12:20:38</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>TestNG-test=Test-3@272171555</td>   <td></td> </tr>
 </table>
